# shadPS4-Android

./: .gitignore  README.md  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  shadps4_jni.cpp
app/src/main/cpp/shadps4/: common.h  crypto.h  pfs.h  pkg.cpp  pkg.h  pkg_type.h  psf.cpp  psf.h
app/src/main/java/com/shadps4/emulator/: MainActivity.kt  ShadPs4App.kt
app/src/main/java/com/shadps4/emulator/data/model/: GameInfo.kt  ParamSfo.kt  PkgInstallResult.kt  SampleGames.kt
app/src/main/java/com/shadps4/emulator/data/native/: ShadPs4Native.kt
app/src/main/java/com/shadps4/emulator/data/repository/: GameRepository.kt  SettingsRepository.kt
app/src/main/java/com/shadps4/emulator/ui/: ShadPs4App.kt
app/src/main/java/com/shadps4/emulator/ui/components/: GameCard.kt  ShadNavigationBar.kt
app/src/main/java/com/shadps4/emulator/ui/navigation/: Destination.kt  TopLevelDestination.kt
app/src/main/java/com/shadps4/emulator/ui/screens/about/: AboutScreen.kt
app/src/main/java/com/shadps4/emulator/ui/screens/compatibility/: CompatibilityScreen.kt
app/src/main/java/com/shadps4/emulator/ui/screens/gamedetail/: GameDetailScreen.kt
app/src/main/java/com/shadps4/emulator/ui/screens/home/: HomeScreen.kt
app/src/main/java/com/shadps4/emulator/ui/screens/settings/: SettingsScreen.kt
app/src/main/java/com/shadps4/emulator/ui/theme/: Shapes.kt  Theme.kt  ThemeMode.kt  Type.kt
app/src/main/java/com/shadps4/emulator/viewmodel/: LibraryViewModel.kt
app/src/main/res/drawable/: ic_brand_logo.xml  ic_game_placeholder.xml  ic_launcher_foreground.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml
gradle/: libs.versions.toml
